# cakto-challenge

./: .coverage  .env.example  .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
cakto_challenge/: settings.py  wsgi.py
fixtures/: dev_seed.json
postman/: cakto-challenge.postman_collection.json
scripts/: entrypoint.sh  seed.py
src/: asgi.py  settings.py  urls.py
src/billing/: constants.py  di.py  models.py  rates.py
src/billing/api/: serializers.py  urls.py  views.py
src/billing/migrations/: 0001_initial.py
src/billing/repositories/: payment_repository.py
src/billing/services/: fee_calculator.py  payment_service.py  split_calculator.py
src/common/: constants.py  exceptions.py  middleware.py  models.py
src/idempotency/: models.py  repositories.py  services.py
src/idempotency/migrations/: 0001_initial.py  0002_remove_idempotencyrecord_status_code.py
src/outbox/: models.py
src/outbox/migrations/: 0001_initial.py
src/outbox/repositories/: outbox_repository.py
tests/: test_api.py  test_fee_calculator.py  test_payment_service.py  test_split_calculator.py
